Fix height cut off in editor views

--- a/public/main.css
+++ b/public/main.css
@@ -280,11 +280,7 @@ button span,
   padding: 10px;
   font-family: 'Monaco', 'Consolas', monospace;
   line-height: 1.6;
-}
-
-@media screen and (min-width: 30rem) {
-  .editor .CodeMirror {
-  }
+  height: 100%;
 }
 
 .source .cm-s-default .CodeMirror-gutters,
